--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Pontus Agsjö
+email: kontakt@pontusagsjo.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Musiker och producent
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "pontusagsjo.se" # the base hostname & protocol for your site, e.g. http://example.com
+instagram_username: pontusmusik
+#youtube_username: pontusmusik
 
 # Build settings
 theme: minima
