--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,11 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Pontus Agsjö
+credit: Powered by Jekyll
 email: kontakt@pontusagsjo.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Musiker och producent
+  Musiker och producent.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "pontusagsjo.se" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: pontusmusik
 #youtube_username: pontusmusik
 
@@ -33,6 +34,7 @@ plugins:
   - jekyll-feed
   - jekyll-remote-theme
   - jekyll-seo-tag
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default.
