--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,10 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Pontus Agsjö
-credit: Powered by Jekyll
+copyright: © Pontus Agsjö 2023
 email: kontakt@pontusagsjo.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Musiker och producent.
+  Musiker och producent
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: pontusmusik
