--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,9 +24,10 @@ email: kontakt@pontusagsjo.se
 description: >- # this means to ignore newlines until "baseurl:"
   Musiker och producent
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.pontusagsjo.se/" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: pontusmusik
-#youtube_username: pontusmusik
+youtube_username: "@pontusagsjomusik"
+linkedin_username: pontusagsjo
 
 # Build settings
 theme: minima
@@ -35,6 +36,8 @@ plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
   - jemoji
+
+livereload: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
