Update info, img resize

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,7 @@
 
 title: Pontus Agsjö
 copyright: © Pontus Agsjö 2024
-email: kontakt@pontusagsjo.se
+email: pontus.agsjo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Musiker och producent
 baseurl: "" # the subpath of your site, e.g. /blog
