--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,8 +24,8 @@ description              : "Musiker, musiklärare och musikproducent."
 url                      : "https://pontusagsjo.se" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/Logo_Fisk_Trans.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/Logo_Fisk_Circle.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "/assets/logo_fisk_trans.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo                     : "/assets/logo_fisk_circle.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
