--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -139,6 +139,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/pontusagsjo"
+    - label: "YouTube"
+      icon: "fab fa-fw fa-youtube"
+      url: "https://youtube.com/@pontusagsjomusik"
 
 # Site Footer
 footer:
@@ -164,6 +167,9 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/pontusagsjo"
+    - label: "YouTube"
+      icon: "fab fa-fw fa-youtube"
+      url: "https://youtube.com/@pontusagsjomusik"
 
 
 # Reading Files
