--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "CV"
-    url: /CV/
+    url: /cv/
   - title: "Portfolio"
     url: /portfolio/
   - title: "Kontakt"
