--- a/docs/_data/ui-text.yml
+++ b/docs/_data/ui-text.yml
@@ -81,7 +81,7 @@ sv: &DEFAULT_SV
   meta_label                 :
   tags_label                 : "Taggar:"
   categories_label           : "Kategorier:"
-  date_label                 : "Uppdaterad:"
+  date_label                 : " "
   comments_label             : "Lämna en kommentar"
   comments_title             : "Kommentarer"
   more_label                 : "Läs mer"
